# lumo-causal-impact

./: .dockerignore  .dvcignore  .gitattributes  .gitignore  CITATION.cff  Dockerfile  LICENSE  Makefile  README.md  dvc.yaml  environment.yml  pyproject.toml  requirements-ci.txt  requirements.txt  run_pipeline.py
.github/workflows/: ci.yml
configs/: base.yaml  data.yaml
data/: README.md
docs/: DATA_SOURCES.md  LIMITATIONS.md  METHODS.md  ODM_files.md  RESULTS.md
notebooks/: 00_inspect_raw_ods.py  01_inspect_1415_sheets.py  02_probe_1415_details.py
results/metrics/: air_abstraction_share.json  air_modal_shift.json  carbon_welfare.json  cs_did.json  footfall_validation.json  gc_hull_replication.json  m2_panel_summary.json  m2_unit_selection.json  m3_augmented_sc.json  m3_causal_impact_operator.json  m3_did_event_study.json  m3_generalised_sc.json  m3_operator_analysis.json  m3_robustness_sc.json  m3_synthetic_control.json  m3_within_corridor.json  m4_deep_counterfactual.json  m4_deep_crn.json  m5_heterogeneity.json  m6_confounder_controls.json  m6_openaccess_sector.json  m6_ticket_mechanism.json  master_synthesis.json  missingness_characterisation.json  multiple_testing.json  od_causal_forest.json  od_corridor_robustness.json  od_event_study.json  od_inference.json  od_substitution_creation.json  qa_reconcile_1410_1415.json  qa_station_usage.json  sensitivity_confounding.json  triangulation_summary.json
results/tables/: air_modal_shift.csv  carbon_welfare.csv  (+23 more)
tests/: test_estimators.py  test_imports.py  test_operator_parse.py  test_parsers.py
(+46 files in other folders)
